testsuite/tests/grammar/invalid_error_node/test_synthetic.lkt
import common

@synthetic class ErrorDecl : FooNode implements ErrorNode {
}
